@@ -380,7 +380,7 @@ argument_list|()
 argument_list|,
 name|config
 operator|.
-name|getZkHostPort
+name|getSolrHostPort
 argument_list|()
 argument_list|,
 name|config
@@ -429,7 +429,7 @@ name|int
 name|zkClientTimeout
 parameter_list|,
 name|String
-name|hostPort
+name|solrHostPort
 parameter_list|,
 name|String
 name|hostContext
@@ -506,7 +506,7 @@ if|if
 condition|(
 literal|null
 operator|==
-name|hostPort
+name|solrHostPort
 condition|)
 block|{
 throw|throw
@@ -608,7 +608,7 @@ name|zkDataHome
 argument_list|,
 name|zkConfHome
 argument_list|,
-name|hostPort
+name|solrHostPort
 argument_list|)
 expr_stmt|;
 name|zkServer
@@ -778,7 +778,7 @@ name|zkClientConnectTimeout
 argument_list|,
 name|host
 argument_list|,
-name|hostPort
+name|solrHostPort
 argument_list|,
 name|hostContext
 argument_list|,
