@@ -678,7 +678,7 @@ literal|"Should have gotten a new port the xml file sent to ZK, overrides the co
 argument_list|,
 name|cfg
 operator|.
-name|getZkHostPort
+name|getSolrHostPort
 argument_list|()
 argument_list|,
 literal|"9045"
@@ -717,7 +717,7 @@ literal|"Should have gotten a new port the xml file sent to ZK"
 argument_list|,
 name|cfg
 operator|.
-name|getZkHostPort
+name|getSolrHostPort
 argument_list|()
 argument_list|,
 literal|"9045"
@@ -891,7 +891,7 @@ literal|"Should have gotten the default port"
 argument_list|,
 name|cfg
 operator|.
-name|getZkHostPort
+name|getSolrHostPort
 argument_list|()
 argument_list|,
 literal|"8983"
